# hub-posit

./: .gitignore  README.md
numeric/: CMakeLists.txt
numeric/src/: gen_lut.cpp
synth/: elaborate_json.py  plot_graphs.ipynb  plot_graphs_unconstrained.ipynb  run_all.sh
synth/Addition/: gen_synopsys_json.py  synopsys_results.json
synth/Addition/HUB/: myAreaScript.sh  myDCscript copy.sh  myDCscript.sh  myPowerScript.sh  myTimeScript.sh
synth/Addition/HUB/16bits/: flopoco.vhdl
synth/Addition/HUB/16bits/300_MHz/: s1  (+5 more)
synth/Addition/HUB/32bits/: flopoco.vhdl
synth/Addition/HUB/8bits/: flopoco.vhdl
synth/Addition/HUB/results/: area.csv  delay.csv  power.csv  synopsys_results.json
synth/Addition/Original/: myPowerScript.sh  myResultScript.sh  myTimeScript.sh
synth/Addition/Original/results/: area.csv  delay.csv  power.csv  synopsys_results.json
synth/Multiplication/: synopsys_results.json
synth/Multiplication/HUB/: myDCscript copy.sh  myDCscript.sh  myTimeScript.sh
synth/Multiplication/HUB/16bits/: flopoco.vhdl
synth/Multiplication/HUB/32bits/: flopoco.vhdl
synth/Multiplication/HUB/8bits/: flopoco.vhdl
synth/Multiplication/HUB/results/: area.csv  delay.csv  power.csv  synopsys_results.json
synth/Multiplication/Original/: myAreaScript.sh  myDCscript.sh  myPowerScript.sh  myTimeScript.sh
synth/Multiplication/Original/results/: area.csv  delay.csv  power.csv  synopsys_results.json
test/: CMakeLists.txt  README.md  README.txt
test/src/: gen_rand_tb.cpp  gen_tb.cpp  plot.ipynb  test_acc.cpp  test_acc_2n.cpp  test_acc_old.cpp  test_acc_orig.cpp
(+1429 files in other folders)
